Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage{res/preambule}
 
 \NewDocumentCommand{\nomeAluno}{}{Charles Quirino Pimenta}
+\NewDocumentCommand{\nomeProfessor}{}{Dr. Rodney Saldanha}
 \NewDocumentCommand{\titleLa}{}{Trabalho II \\ Otimização em Engenharia Elétrica}
 \NewDocumentCommand{\titleLb}{}{Otimização com Algoritmos Quase-Newton e Aproximações Quadráticas}
 
