--- a/res/capa.tex
+++ b/res/capa.tex
@@ -34,6 +34,7 @@
 
 \begin{flushright}
     \begin{minipage}{12.0cm}
+        {\bf Professor:} \nomeProfessor \\
         {\bf Aluno:} \nomeAluno     
     \end{minipage}
 \end{flushright}
