Updates from Overleaf

--- a/sections/section3-1.tex
+++ b/sections/section3-1.tex
@@ -1,4 +1,11 @@
 % Experimentos e Resultados
+
+\pgfplotstableread{datagap/gap_tempo_Hibrido.txt}\tbltempo
+\pgfplotstableread{datagap/gap_iter_Hibrido.txt}\tbliter
+\pgfplotstableread{datagap/gap_EFobj_Hibrido.txt}\tblEFobj
+\pgfplotstableread{datagap/gap_ESOL_Hibrido.txt}\tblESOL
+
+
 \subsection{1° Experimento: Avaliação das Funções Quadráticas}
     \subsubsection{Primeira Função Analisada}
     \subsubsection{Segunda Função Analisada}
