Updates from Overleaf

--- a/sections/section3-1.tex
+++ b/sections/section3-1.tex
@@ -1,12 +1,18 @@
 % Experimentos e Resultados
 
-\pgfplotstableread{datagap/gap_tempo_Hibrido.txt}\tbltempo
-\pgfplotstableread{datagap/gap_iter_Hibrido.txt}\tbliter
-\pgfplotstableread{datagap/gap_EFobj_Hibrido.txt}\tblEFobj
-\pgfplotstableread{datagap/gap_ESOL_Hibrido.txt}\tblESOL
-
+\pgfplotstableread{data/sec1s1tbl2.txt}{\tbla}
+\pgfplotstableread{data/sec1s1tbl3.txt}{\tblb}
+\pgfplotstableread{data/sec1s1tbl4.txt}{\tblc}
+\pgfplotstableread{data/sec1s1tbl5.txt}{\tbld}
+\pgfplotstableread{data/sec1s1tbl6.txt}{\tble}
+\pgfplotstableread{data/sec1s1tbl7.txt}{\tblf}
+\pgfplotstableread{data/sec1s1tbl8.txt}{\tblg}
+\pgfplotstableread{data/sec1s1tbl9.txt}{\tblh}
 
 \subsection{1° Experimento: Avaliação das Funções Quadráticas}
     \subsubsection{Primeira Função Analisada}
+
+        \writetabledir{\tblb}
+    
     \subsubsection{Segunda Função Analisada}
     \subsubsection{Terceira Função Analisada}
