--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -41,13 +41,9 @@ tikz
 \usepackage{graphicx}
 \usepackage{float}
 
-\pgfplotstableset{% global config, for example in the preamble
-  every head row/.style={before row=\toprule,after row=\midrule},
-  every last row/.style={after row=\bottomrule},
-}
-\pgfplotsset{compat=1.18}
 
 
+\usepackage{res/macros}
 
 
 
