Updates from Overleaf

--- a/res/macros.sty
+++ b/res/macros.sty
@@ -10,7 +10,7 @@
 
 % ,TEnd_Medio,N_Iter_Medio,N_Evals_F_Medio,Erro_Xsol_P_Medio,Erro_F_P_Medio,Erro_Xsol_P
 
-\newcommand{\writetabledir}[1]
+\newcommand{\writetable}[1]
 {  
     \pgfplotstabletypeset
     [
