--- a/sections/section3-1.tex
+++ b/sections/section3-1.tex
@@ -12,7 +12,80 @@
 \subsection{1° Experimento: Avaliação das Funções Quadráticas}
     \subsubsection{Primeira Função Analisada}
 
-        \writetabledir{\tblb}
-    
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[9,9]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
+            \label{tab:tbla} 
+            \writetable{\tbla}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
+        \end{minipage}
+
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[-3,2]\Longrightarrow$  Avaliação Direta de $f(x)$
+            \label{tab:tblb} 
+            \writetable{\tblb}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
+        \end{minipage}
+
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[-8,-6]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
+            \label{tab:tblc} 
+            \writetable{\tblc}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{3}}$}
+        \end{minipage}
+        
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[5,-7]\Longrightarrow$  Avaliação Direta de $f(x)$
+            \label{tab:tbld} 
+            \writetable{\tbld}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{4}}$}
+        \end{minipage}
+        
     \subsubsection{Segunda Função Analisada}
+
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
+            \label{tab:tble} 
+            \writetable{\tble}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
+        \end{minipage}
+        
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
+            \label{tab:tblf} 
+            \writetable{\tblf}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
+        \end{minipage}
+    
     \subsubsection{Terceira Função Analisada}
+
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
+            \label{tab:tblg} 
+            \writetable{\tblg}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
+        \end{minipage}
+        
+        \begin{minipage}{\linewidth}
+            \centering
+            $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
+            \label{tab:tblh} 
+            \writetable{\tblh}\par
+            \bigskip
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
+        \end{minipage}
+
+\newpage
