--- a/sections/section3-3.tex
+++ b/sections/section3-3.tex
@@ -1,3 +1,5 @@
 % Experimentos e Resultados
 \subsection{3° Experimento: Avaliação do Custo Computacional em Função de Variação da Dimensão}
     \subsubsection{Função Analisada}
+    
+\newpage
