--- a/sections/section3-4.tex
+++ b/sections/section3-4.tex
@@ -2,3 +2,5 @@
 \subsection{4° Experimento: Técnica da Seção Áurea - Avaliação Direta da Função e Aproximações Quadráticas da Função a Cada Iteração}
     \subsubsection{Primeira Função Analisada}
     \subsubsection{Segunda Função Analisada}
+
+\newpage
