--- a/sections/section3-5.tex
+++ b/sections/section3-5.tex
@@ -1,3 +1,5 @@
 % Experimentos e Resultados
 \subsection{5° Experimento: Avaliação dos Métodos Quase-Newton em Problemas com Hessiana Singular}
     \subsubsection{Função Analisada}
+
+\newpage
