--- a/sections/section3-6.tex
+++ b/sections/section3-6.tex
@@ -1,3 +1,5 @@
 % Experimentos e Resultados
 \subsection{6° Experimento: Avaliação Estatística dos Métodos Quase-Newton com Variação do Parâmetro $\alpha$}
     \subsubsection{Função Analisada}
+
+\newpage
