--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -40,7 +40,9 @@ tikz
 \usepackage{subcaption}
 \usepackage{graphicx}
 \usepackage{float}
-
+\usepackage{tabularx,ragged2e,booktabs,caption}
+\newcolumntype{C}[1]{>{\Centering}m{#1}}
+\renewcommand\tabularxcolumn[1]{C{#1}}
 
 
 \usepackage{res/macros}
