Updates from Overleaf

--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -40,6 +40,7 @@ tikz
 \usepackage{subcaption}
 \usepackage{graphicx}
 \usepackage{float}
+\restylefloat{table}
 \usepackage{tabularx,ragged2e,booktabs,caption}
 \newcolumntype{C}[1]{>{\Centering}m{#1}}
 \renewcommand\tabularxcolumn[1]{C{#1}}
