--- a/sections/section3-2.tex
+++ b/sections/section3-2.tex
@@ -1,25 +1,24 @@
 % Experimentos e Resultados
 
-\pgfplotstableread{data/sec1s1tbl2.txt}{\tbla}
-\pgfplotstableread{data/sec1s1tbl3.txt}{\tblb}
+\pgfplotstableread{data/sec1s1tbl10a.txt}{\tblh}
+\pgfplotstableread{data/sec1s1tbl10b.txt}{\tbli}
 
 \subsection{2° Experimento: Avaliação das Funções Não Quadráticas}
     \subsubsection{Função Analisada}
-
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas de $f(x)$
-            \label{tab:tblg} 
-            \writetable{\tblg}\par
+        \begin{table}[h!]{\linewidth}
+            \begin{subtable}[h!]{0.45\textwidth} 
+                {Aproximações Quadráticas de $f(x)$}
+                \label{tab:tblh} 
+                \writetable{\tblh}               
+            \end{subtable}
             \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando $\alpha=-0.0263$.}
-
-            \centering
-            $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
-            \label{tab:tblg} 
-            \writetable{\tblg}\par
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando $\alpha=-0.0263$.}
-        \end{minipage}
+         
+            \begin{subtable}[h!]{0.45\textwidth}
+                {Avaliação Direta de $f(x)$}
+                \label{tab:tbli} 
+                \writetable{\tbli}        
+            \end{subtable}
+            \caption{Resultados relacionados ao esforço computacional e precisão considerando}
+        \end{table}
          
 \newpage    
