Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,9 @@
 
 \begin{document}
     \import{res/}{capa} 
+    \myemptypage % Página em branco no verso da capa
+    \tableofcontents
+    \newpage
     \section{Introdução}
         \import{sections/}{section1}
     \section{Desenvolvimento}
