--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -8,6 +8,7 @@
 \usepackage{ae}
 \usepackage{xargs}
 \usepackage{indentfirst}
+\usepackage{titlesec}
 \usepackage[margin=2cm]{geometry}
 \usepackage{amsthm,amssymb,amsfonts,amsmath}
 \usepackage{psfrag}
@@ -44,7 +45,7 @@ tikz
 \usepackage{tabularx,ragged2e,booktabs,caption}
 \newcolumntype{C}[1]{>{\Centering}m{#1}}
 \renewcommand\tabularxcolumn[1]{C{#1}}
-
+\usepackage{afterpage}
 
 \usepackage{res/macros}
 
