--- a/capa.tex
+++ b/capa.tex
@@ -1,5 +1,5 @@
 \thispagestyle{empty}
-
+\addtocounter{page}{-1}
 \noindent
 \begin{minipage}{0.8\linewidth}
   {\Large\bf Universidade Federal de Minas Gerais}\\
