--- a/res/macros.sty
+++ b/res/macros.sty
@@ -1,14 +1,20 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{macros}[2023/05/05 Pacote de macros para carregar tabelas]
+\ProvidesPackage{macros}[2023/05/05 Pacote de macros]
 
- \pgfplotstableset
- {% global config, for example in the preamble
+\newcommand\myemptypage% Insere uma página em branco sem numeração
+{ 
+    \null
+    \thispagestyle{empty}
+    \addtocounter{page}{-1}
+    \newpage
+}
+
+\pgfplotstableset% global config para plot das tabelas, adcionar no preamble
+{
   every head row/.style={before row=\toprule,after row=\midrule},
   every last row/.style={after row=\bottomrule},
 }
 \pgfplotsset{compat=1.18}
-
-% ,TEnd_Medio,N_Iter_Medio,N_Evals_F_Medio,Erro_Xsol_P_Medio,Erro_F_P_Medio,Erro_Xsol_P
 
 \newcommand{\writetable}[1]
 {  
