Updates from Overleaf

--- a/sections/section3-3.tex
+++ b/sections/section3-3.tex
@@ -1,4 +1,11 @@
 % Experimentos e Resultados
+
+\pgfplotstableread{data/sec1s1tbl13a.txt}{\tbli}
+\pgfplotstableread{data/sec1s1tbl13b.txt}{\tblj}
+\pgfplotstableread{data/sec1s1tbl13c.txt}{\tblk}
+\pgfplotstableread{data/sec1s1tbl13d.txt}{\tbll}
+\pgfplotstableread{data/sec1s1tbl13e.txt}{\tblm}
+
 \subsection{3° Experimento: Avaliação do Custo Computacional em Função de Variação da Dimensão}
     \subsubsection{Função Analisada}
     
