Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
     \myemptypage % Página em branco no verso da capa
     \tableofcontents
     \newpage
+    \setlength{\parindent}{0cm}
     \section{Introdução}
         \import{sections/}{section1}
     \section{Desenvolvimento}
