--- a/sections/section3-1.tex
+++ b/sections/section3-1.tex
@@ -16,7 +16,7 @@
             \centering
             $x_0=[9,9]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
             \label{tab:tbla} 
-            \writetable{\tbla}\par
+            \writetable{\tbla}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
         \end{minipage}
@@ -25,7 +25,7 @@
             \centering
             $x_0=[-3,2]\Longrightarrow$  Avaliação Direta de $f(x)$
             \label{tab:tblb} 
-            \writetable{\tblb}\par
+            \writetable{\tblb}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
         \end{minipage}
@@ -34,7 +34,7 @@
             \centering
             $x_0=[-8,-6]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
             \label{tab:tblc} 
-            \writetable{\tblc}\par
+            \writetable{\tblc}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{3}}$}
         \end{minipage}
@@ -43,7 +43,7 @@
             \centering
             $x_0=[5,-7]\Longrightarrow$  Avaliação Direta de $f(x)$
             \label{tab:tbld} 
-            \writetable{\tbld}\par
+            \writetable{\tbld}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{4}}$}
         \end{minipage}
@@ -54,7 +54,7 @@
             \centering
             $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
             \label{tab:tble} 
-            \writetable{\tble}\par
+            \writetable{\tble}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
         \end{minipage}
@@ -63,7 +63,7 @@
             \centering
             $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
             \label{tab:tblf} 
-            \writetable{\tblf}\par
+            \writetable{\tblf}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
         \end{minipage}
@@ -74,7 +74,7 @@
             \centering
             $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
             \label{tab:tblg} 
-            \writetable{\tblg}\par
+            \writetable{\tblg}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
         \end{minipage}
@@ -83,7 +83,7 @@
             \centering
             $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
             \label{tab:tblh} 
-            \writetable{\tblh}\par
+            \writetable{\tblh}
             \bigskip
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
         \end{minipage}
