Updates from Overleaf

--- a/sections/section3-3.tex
+++ b/sections/section3-3.tex
@@ -13,27 +13,27 @@
             \centering
             Dimensão igual a 5
             \label{tab:tblo} 
-            \writetable{\tblo}\par
+            \writetable{\tblo}
             \bigskip
             \centering
             Dimensão igual a 10
             \label{tab:tblp} 
-            \writetable{\tblp}\par
+            \writetable{\tblp}
             \bigskip
             \centering
             Dimensão igual a 15
             \label{tab:tblq} 
-            \writetable{\tblq}\par
+            \writetable{\tblq}
             \bigskip
             \centering
             Dimensão igual a 20
             \label{tab:tblr} 
-            \writetable{\tblr}\par
+            \writetable{\tblr}
             \bigskip
             \centering
             Dimensão igual a 25
             \label{tab:tbls} 
-            \writetable{\tbls}\par
+            \writetable{\tbls}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando a dimensão $n$}
         \end{minipage}
     
