--- a/sections/section3-2.tex
+++ b/sections/section3-2.tex
@@ -14,12 +14,12 @@
             \centering
             Aproximações Quadráticas de $f(x)$
             \label{tab:tbli} 
-            \writetable{\tbli}\par
+            \writetable{\tbli}
             \bigskip
             \centering
             Avaliação Direta de $f(x)$
             \label{tab:tblj} 
-            \writetable{\tblj}\par
+            \writetable{\tblj}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando $\alpha = -0.0263$}
         \end{minipage}
 
@@ -29,12 +29,12 @@
             \centering
             {Aproximações Quadráticas de $f(x)$}
             \label{tab:tblk} 
-            \writetable{\tblk}\par
+            \writetable{\tblk}
             \bigskip
             \centering
             {Avaliação Direta de $f(x)$}
             \label{tab:tbll} 
-            \writetable{\tbll}\par
+            \writetable{\tbll}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando $\alpha = 0.0263$}
         \end{minipage}
 
@@ -44,12 +44,12 @@
             \centering
             {Aproximações Quadráticas de $f(x)$}
             \label{tab:tblm} 
-            \writetable{\tblm}\par
+            \writetable{\tblm}
             \bigskip
             \centering
             {Avaliação Direta de $f(x)$}
             \label{tab:tbln} 
-            \writetable{\tbln}\par     
+            \writetable{\tbln}     
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando $\alpha = 1.0$}
         \end{minipage}
          
