Updates from Overleaf

--- a/sections/section3-4.tex
+++ b/sections/section3-4.tex
@@ -8,7 +8,7 @@
 \subsection{4° Experimento: Técnica da Seção Áurea - Avaliação Direta da Função e Aproximações Quadráticas da Função a Cada Iteração}
     \subsubsection{Primeira Função Analisada}
 
-    \begin{minipage}[h!]{\linewidth}
+        \begin{minipage}[h!]{\linewidth}
             \centering
             $x_0=[-6,-5]\Longrightarrow$  Avaliação Direta de $f(x)$            
             \label{tab:tblt} 
@@ -22,5 +22,18 @@
         \end{minipage}
         
     \subsubsection{Segunda Função Analisada}
+
+        \begin{minipage}[h!]{\linewidth}
+            \centering
+            $x_0=[-6,-5]\Longrightarrow$  Avaliação Direta de $f(x)$            
+            \label{tab:tblv} 
+            \writetable{\tblv}
+            \bigskip
+            \centering
+            $x_0=[-6,-5]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
+            \label{tab:tblx} 
+            \writetable{\tblx}
+            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_0$}
+        \end{minipage}
 
 \newpage
