Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,11 @@
 \begin{document}
     \import{res/}{capa} 
     \myemptypage % Página em branco no verso da capa
+    \thispagestyle{empty}
+    \listoffigures
+    \listoftables
+    \newpage
+    \pagenumbering{arabic}
     \tableofcontents
     \newpage
     \setlength{\parindent}{0cm}
