Updates from Overleaf

--- a/sections/section3-2.tex
+++ b/sections/section3-2.tex
@@ -14,7 +14,7 @@
             \centering
             Aproximações Quadráticas de $f(x)$
             \label{tab:tbli} 
-            \writetable{\tbli}
+            \writetable{\tbli}\par
             \bigskip
             \centering
             Avaliação Direta de $f(x)$
@@ -29,7 +29,7 @@
             \centering
             {Aproximações Quadráticas de $f(x)$}
             \label{tab:tblk} 
-            \writetable{\tblk}
+            \writetable{\tblk}\par
             \bigskip
             \centering
             {Avaliação Direta de $f(x)$}
@@ -44,7 +44,7 @@
             \centering
             {Aproximações Quadráticas de $f(x)$}
             \label{tab:tblm} 
-            \writetable{\tblm}
+            \writetable{\tblm}\par
             \bigskip
             \centering
             {Avaliação Direta de $f(x)$}
