--- a/sections/section3-3.tex
+++ b/sections/section3-3.tex
@@ -13,22 +13,22 @@
             \centering
             Dimensão igual a 5
             \label{tab:tblo} 
-            \writetable{\tblo}
+            \writetable{\tblo}\par
             \bigskip
             \centering
             Dimensão igual a 10
             \label{tab:tblp} 
-            \writetable{\tblp}
+            \writetable{\tblp}\par
             \bigskip
             \centering
             Dimensão igual a 15
             \label{tab:tblq} 
-            \writetable{\tblq}
+            \writetable{\tblq}\par
             \bigskip
             \centering
             Dimensão igual a 20
             \label{tab:tblr} 
-            \writetable{\tblr}
+            \writetable{\tblr}\par
             \bigskip
             \centering
             Dimensão igual a 25
