--- a/sections/section3-4.tex
+++ b/sections/section3-4.tex
@@ -12,7 +12,7 @@
             \centering
             $x_0=[-6,-5]\Longrightarrow$  Avaliação Direta de $f(x)$            
             \label{tab:tblt} 
-            \writetable{\tblt}
+            \writetable{\tblt}\par
             \bigskip
             \centering
             $x_0=[-6,-5]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
@@ -27,7 +27,7 @@
             \centering
             $x_0=[-6,-5]\Longrightarrow$  Avaliação Direta de $f(x)$            
             \label{tab:tblv} 
-            \writetable{\tblv}
+            \writetable{\tblv}\par
             \bigskip
             \centering
             $x_0=[-6,-5]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
