--- a/sections/section3-6.tex
+++ b/sections/section3-6.tex
@@ -7,6 +7,7 @@
 \pgfplotstableread{data/sec1s1tbl17_Erro_F_P.txt}{\tblAe}
 \pgfplotstableread{data/sec1s1tbl17_raw.txt}{\tblAr}
 
+
 \pgfplotstableread{data/sec1s1tbl18_tEnd.txt}{\tblBa}
 \pgfplotstableread{data/sec1s1tbl18_N_Iter.txt}{\tblBb}
 \pgfplotstableread{data/sec1s1tbl18_N_Evals.txt}{\tblBc}
@@ -57,36 +58,44 @@
         \end{minipage}
 
         \pgfplotsset{width=7cm,compat=1.18}\usepgfplotslibrary{statistics}
-        \pgfplotsset{
-            only if/.style args={entry of #1 is #2}{
-                /pgfplots/boxplot/data filter/.code={
-                    \edef\tempa{\thisrow{#1}}
-                    \edef\tempb{#2}
-                    \ifx\tempa\tempb
-                    \else
-                        \def\pgfmathresult{}
-                    \fi
-                }
-            }
-        }
 
-        \begin{tikzpicture}
-            \begin{axis}[
-                boxplot/draw direction=y,
-                table/y=v,
-                x axis line style={opacity=0},
-                axis x line*=bottom,
-                axis y line=left,
-                enlarge y limits,
-                ymajorgrids,
-                xtick={1,2,3,4},
-                xticklabels={DFP, BFGS, Huang, Biggs},
-            ]
-            \addplot table[y index=1, row sep=newline, col sep=tab]{\tblAr};
  
-        \end{axis}
+  
+        \begin{tikzpicture}
+            \begin{semilogyaxis}[
+                boxplot,
+                table/y=N_Evals_F,
+                table/x=Metodo,
+                boxplot/draw direction=y,  
+            ]
+                \addplot [x filter/.code={\pgfplotstablegetelem{\coordindex}{Metodo}\of{\tblAr}
+                    \pgfmathtruncatemacro{\tempva}{abs(\pgfplotsretval - 0) <= 0.001 ? 1: 0}
+                    \ifnum\tempva>0%true
+                    \else%false
+                    \def\pgfmathresult{}
+                    \fi}] table{\tblAr};
+                \addplot [x filter/.code={\pgfplotstablegetelem{\coordindex}{Metodo}\of{\tblAr}
+                    \pgfmathtruncatemacro{\tempva}{abs(\pgfplotsretval - 1) <= 0.001 ? 1: 0}
+                    \ifnum\tempva>0%true
+                    \else%false
+                    \def\pgfmathresult{}
+                    \fi}] table{\tblAr};    
+                \addplot [x filter/.code={\pgfplotstablegetelem{\coordindex}{Metodo}\of{\tblAr}
+                    \pgfmathtruncatemacro{\tempva}{abs(\pgfplotsretval - 2) <= 0.001 ? 1: 0}
+                    \ifnum\tempva>0%true
+                    \else%false
+                    \def\pgfmathresult{}
+                    \fi}] table{\tblAr};  
+                \addplot [x filter/.code={\pgfplotstablegetelem{\coordindex}{Metodo}\of{\tblAr}
+                    \pgfmathtruncatemacro{\tempva}{abs(\pgfplotsretval - 3) <= 0.001 ? 1: 0}
+                    \ifnum\tempva>0%true
+                    \else%false
+                    \def\pgfmathresult{}
+                    \fi}] table{\tblAr}; 
+            \end{semilogyaxis}    
         \end{tikzpicture}
-        
+
+
 
         \begin{minipage}[h!]{\linewidth}
             \centering
